Changed styles to no action bar and for about us added the actionbar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity
             android:name=".view.AboutUsActivity"
-            android:parentActivityName=".view.MainActivity" />
+            android:parentActivityName=".view.MainActivity"
+            android:theme="@style/AppTheme.AboutUs" />
     </application>
 
 </manifest>
