--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.4'
 }
