--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.4'
     compile project(path: ':doodlelibrary')
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
